Get ready for the 1st release